--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build": "parcel build"
     },
     "devDependencies": {
+        "parcel": "latest",
         "@tailwindcss/aspect-ratio": "^0.4.2",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.3.5"
